// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Nav /> renders a full nav when the user is signed in 1`] = `
Array [
  <Link
    href="/items"
  >
    <a
      href="/items"
      onClick={[Function]}
    >
      Shop
    </a>
  </Link>,
  <Link
    href="/sell"
  >
    <a
      href="/sell"
      onClick={[Function]}
    >
      Sell
    </a>
  </Link>,
  <Link
    href="/orders"
  >
    <a
      href="/orders"
      onClick={[Function]}
    >
      Orders
    </a>
  </Link>,
  <Link
    href="/me"
  >
    <a
      href="/me"
      onClick={[Function]}
    >
      Account
    </a>
  </Link>,
]
`;

exports[`<Nav /> renders a minimal nav when the user is signed out 1`] = `
Array [
  <Link
    href="/items"
  >
    <a
      href="/items"
      onClick={[Function]}
    >
      Shop
    </a>
  </Link>,
  <Link
    href="/signup"
  >
    <a
      href="/signup"
      onClick={[Function]}
    >
      Sign In
    </a>
  </Link>,
]
`;

exports[`<Nav /> renders the amount of items in the cart 1`] = `
<div
  className="count CartCount__Dot-xxvp4g-1 kDZyEW"
>
  3
</div>
`;
